--- a/css/main.css
+++ b/css/main.css
@@ -12,3 +12,11 @@ body {
     max-width: 600px;
     margin: 0 auto;
 }
+h1 {
+    color:white;
+    text-align: center;
+}
+span {
+    color: white;
+    text-align: center;
+}
