--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,31 @@
 body {
     background-color: #232323;
 }
-.square{
+
+.square {
     width: 30%;
     background: purple;
     padding-bottom: 30%;
-    float:left;
-    margin:1.66%;
+    float: left;
+    margin: 1.66%;
 }
-#container{
+
+#container {
+    margin: 0px auto;
     max-width: 600px;
-    margin: 0 auto;
 }
+
 h1 {
-    color:white;
-    text-align: center;
-}
-span {
     color: white;
-    text-align: center;
 }
+
 #stripe {
-    text-align: center;
-    background-color: white;
+    background: white;
     height: 30px;
+    text-align: center;
+    color: black;
+}
+
+.selected {
+    background: blue;
 }
