--- a/css/main.css
+++ b/css/main.css
@@ -35,8 +35,10 @@ h1 {
     font-size: 50px;
 }
 #message{
-    width: 20%;
+    width: 10%;
     display: inline-block;
+    font-size: 20px;
+    font-weight: 700;
 }
 #stripe {
     background: white;
